# polymarket-trader-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DOCKER.md  Dockerfile  Dockerfile.dev  README.md  config.yaml  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci-cd.yml
bot/: notifications.py  telegram_bot.py
database/: db.py  models.py
scripts/: check_clob_trades.py  check_eoa_polygon_gas.py  check_gamma_markets.py  check_gamma_markets_requests.py  check_positions.py  check_token_holder.py  check_wallet_addresses.py  diagnose_signing.py  run_redeem_once.py
tests/: conftest.py  test_clob_account.py  test_config.py  test_database.py  test_executor.py  test_notifications.py  test_portfolio.py  test_probability.py  test_scanner.py
trading/: btc_feed.py  btc_strategy.py  clob_account.py  clob_positions.py  data_api.py  executor.py  portfolio.py  probability.py  redeemer.py  scanner.py  signals.py  wallet_watch.py
utils/: config.py  logger.py  polygon_web3.py  wallet.py
